; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/replication/logical/extr_proto.c_logicalrep_read_insert.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/replication/logical/extr_proto.c_logicalrep_read_insert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"expected new tuple but got %d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @logicalrep_read_insert(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8, align 1
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %7 = load i32, i32* %3, align 4
  %8 = call i32 @pq_getmsgint(i32 %7, i32 4)
  store i32 %8, i32* %6, align 4
  %9 = load i32, i32* %3, align 4
  %10 = call signext i8 @pq_getmsgbyte(i32 %9)
  store i8 %10, i8* %5, align 1
  %11 = load i8, i8* %5, align 1
  %12 = sext i8 %11 to i32
  %13 = icmp ne i32 %12, 78
  br i1 %13, label %14, label %18

14:                                               ; preds = %2
  %15 = load i32, i32* @ERROR, align 4
  %16 = load i8, i8* %5, align 1
  %17 = call i32 @elog(i32 %15, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0), i8 signext %16)
  br label %18

18:                                               ; preds = %14, %2
  %19 = load i32, i32* %3, align 4
  %20 = load i32*, i32** %4, align 8
  %21 = call i32 @logicalrep_read_tuple(i32 %19, i32* %20)
  %22 = load i32, i32* %6, align 4
  ret i32 %22
}

declare dso_local i32 @pq_getmsgint(i32, i32) #1

declare dso_local signext i8 @pq_getmsgbyte(i32) #1

declare dso_local i32 @elog(i32, i8*, i8 signext) #1

declare dso_local i32 @logicalrep_read_tuple(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
